--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,139 @@
 {% extends 'layout.html' %} {% block body %}
-<h1></h1>
+
+<section class="slideshow">
+  <div class="swiper" id="swiper1">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide">
+        <div>
+          <div class="slides-info">
+            <h1>the ecstasy.</h1>
+            <div class="slide-info">
+              <span class="slide-date">wednesday dec. 28</span>
+              <span class="slide-time">8.00 pm</span>
+              <div>
+                <button>Get Tickets</button>
+                <div class="btn-block"></div>
+              </div>
+            </div>
+          </div>
+          <img src="../static/images/img-1.jpg" alt="" />
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div>
+          <div class="slides-info">
+            <h1>turning jane.</h1>
+            <div class="slide-info">
+              <span class="slide-date">thursday dec. 29</span>
+              <span class="slide-time">7.00 pm</span>
+              <div>
+                <button>Get Tickets</button>
+                <div class="btn-block"></div>
+              </div>
+            </div>
+          </div>
+          <img src="../static/images/img-4.jpg" alt="" />
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div>
+          <div class="slides-info">
+            <h1>double helix.</h1>
+            <div class="slide-info">
+              <span class="slide-date">friday dec. 30</span>
+              <span class="slide-time">8.00 pm</span>
+              <div>
+                <button>Get Tickets</button>
+                <div class="btn-block"></div>
+              </div>
+            </div>
+          </div>
+          <img src="../static/images/img-3.jpg" alt="" />
+        </div>
+      </div>
+      <div class="swiper-slide">
+        <div>
+          <div class="slides-info">
+            <h1>double helix.</h1>
+            <div class="slide-info">
+              <span class="slide-date">saturday dec. 31</span>
+              <span class="slide-time">6.30 pm</span>
+              <div>
+                <button>Get Tickets</button>
+                <div class="btn-block"></div>
+              </div>
+            </div>
+          </div>
+          <img src="../static/images/img-5.jpg" alt="" />
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="upcoming">
+  <div class="upcoming-container">
+    <div class="line1"></div>
+    <div class="upcoming-title">
+      <h1 class="upcoming-title1">upcoming</h1>
+      <div class="upcoming-title2-box">
+        <h1 class="upcoming-title2">shows</h1>
+        <div class="block"></div>
+        <div class="line2"></div>
+      </div>
+    </div>
+    <div class="line3"></div>
+    <div class="upcoming-info">
+      <p>All shows are 18+ to enter and 21+ to purchase alcohol.</p>
+      <p>No smoking inside. Please bring a valid form of ID.</p>
+    </div>
+  </div>
+</section>
+
+<section class="shows">
+  <div class="shows-container">
+    <div class="show">
+      <div class="show-info">
+        <h2>28</h2>
+        <div>
+          <p class="day">wed</p>
+          <p>dec</p>
+        </div>
+        <h3>the ecstasy</h3>
+      </div>
+      <button class="btn">get tickets</button>
+    </div>
+
+    <div class="show">
+      <div class="show-info">
+        <h2>28</h2>
+        <div>
+          <p class="day">wed</p>
+          <p>dec</p>
+        </div>
+        <h3>the ecstasy</h3>
+      </div>
+      <button class="btn">get tickets</button>
+    </div>
+
+    <div class="show">
+      <div class="show-info">
+        <h2>28</h2>
+        <div>
+          <p class="day">wed</p>
+          <p>dec</p>
+        </div>
+        <h3>the ecstasy</h3>
+      </div>
+      <button class="btn">get tickets</button>
+    </div>
+
+    <div class="fancy-btn">
+      <button>Get Tickets</button>
+      <div class="btn-block"></div>
+      <div class="btn-bg"></div>
+    </div>
+  </div>
+</section>
+
 {% endblock %}
