add title for each page

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
-    <title>Bloc Camp</title>
+    <title>Bloc Camp: {{ title }}</title>
   </head>
   <body>
     <section class="navigation">
@@ -133,7 +133,7 @@
               ></path>
             </g>
           </svg>
-          <a href="#">log in</a>
+          <a href="/login">log in</a>
         </div>
       </div>
     </section>
