--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,3 @@
-{% extends 'layout.html' %} {% block body%}
+{% extends 'layout.html' %} {% block body%} {% block title %}About{% endblock %}
 <h1>This is about</h1>
 {% endblock%}
