--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,3 +1,4 @@
-{% extends 'layout.html' %} {% block body %}
+{% extends 'layout.html' %} {% block body %} {% block title %}Contact{% endblock
+%}
 <h1>This is contact</h1>
 {% endblock %}
