--- a/templates/layout.html
+++ b/templates/layout.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
-    <title>Bloc Camp: {{ title }}</title>
+    <title>The Bloc Camp: {% block title %}{% endblock %}</title>
   </head>
   <body>
     <section class="navigation">
