--- a/templates/shows.html
+++ b/templates/shows.html
@@ -1,3 +1,3 @@
-{% extends 'layout.html' %} {% block body%}
+{% extends 'layout.html' %} {% block body%}{% block title %}Shows{% endblock %}
 <h1>This is shows</h1>
 {% endblock%}
