--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %} {% block body %} {% block title %}Contact{% endblock
+{% extends 'layout.html' %}{% block title %}Contact{% endblock %} {% block body
 %}
 <h1>This is contact</h1>
 {% endblock %}
