--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,3 @@
-{% extends 'layout.html'%} {% block body %}{% block title %}Log In{% endblock %}
+{% extends 'layout.html'%}{% block title %}Log In{% endblock %}{% block body %}
 <h1>This is Login page</h1>
 {% endblock %}
