add about title on about page

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -281,16 +281,18 @@ section.navigation.open-nav .hamburger-close {
   }
 }
 /* -------------------- */
-/* Upcoming Section */
+/* Upcoming Section, Calendar Title (on shows page) / About Title (on About page) */
 /* -------------------- */
 .upcoming,
-.calendar {
+.calendar,
+.about {
   background-color: #221333;
   padding: 70px 0;
   margin-top: -5px;
 }
 .upcoming-container,
-.calendar-container {
+.calendar-container,
+.about-container {
   width: 65vw;
   margin: 0 auto;
 }
@@ -302,13 +304,15 @@ section.navigation.open-nav .hamburger-close {
   margin-bottom: 30px;
 }
 .upcoming-title,
-.calendar-title {
+.calendar-title,
+.about-title {
   display: flex;
   align-items: center;
   margin-bottom: 40px;
 }
 .upcoming-title h1,
-.calendar-title h1 {
+.calendar-title h1,
+.about-title h1 {
   font-size: calc(3vw + 1rem);
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -316,23 +320,27 @@ section.navigation.open-nav .hamburger-close {
   padding: 0px 0 0px 20px;
 }
 .upcoming-title1,
-.calendar-title1 {
+.calendar-title1,
+.about-title1 {
   background-color: #ffffff;
   line-height: 1.7;
 }
-.upcoming-title2-box .upcoming-title2 {
+.upcoming-title2-box .upcoming-title2,
+.about-title2-box .about-title2 {
   width: 100%;
   background-color: #df3311;
   margin-bottom: 0;
   line-height: 57px;
 }
 .upcoming-title2-box,
-.calendar-title2-box {
+.calendar-title2-box,
+.about-title2-box {
   width: 272px;
   position: relative;
 }
 .upcoming-title2-box .block,
-.calendar-title2-box .block {
+.calendar-title2-box .block,
+.about-title2-box .block {
   width: 58px;
   height: 17px;
   background-color: #221333;
@@ -370,30 +378,36 @@ section.navigation.open-nav .hamburger-close {
 }
 @media screen and (max-width: 850px) {
   .upcoming,
-  .calendar {
+  .calendar,
+  .about {
     margin-top: 55px;
   }
   .upcoming-container,
-  .calendar-container {
+  .calendar-container,
+  .about-container {
     width: 80vw;
   }
   .upcoming-title h1,
-  .calendar-title h1 {
+  .calendar-title h1,
+  .about-title h1 {
     font-size: calc(2vw + 0.5rem);
     padding-left: 10px;
   }
   .upcoming-title2-box,
-  .calendar-title2-box {
+  .calendar-title2-box,
+  .about-title2-box {
     width: 210px;
   }
   .upcoming-title2-box .block,
-  .calendar-title2-box .block {
+  .calendar-title2-box .block,
+  .about-title2-box .block {
     left: 190px;
   }
   .line2 {
     right: -17px;
   }
-  .upcoming-title2-box .upcoming-title2 {
+  .upcoming-title2-box .upcoming-title2,
+  .about-title2-box .about-title2 {
     line-height: 50px;
   }
   .upcoming-info {
@@ -402,11 +416,13 @@ section.navigation.open-nav .hamburger-close {
 }
 @media screen and (max-width: 450px) {
   .upcoming,
-  .calendar {
+  .calendar,
+  .about {
     padding: 50px 0;
   }
   .upcoming-title2-box .block,
-  .calendar-title2-box .block {
+  .calendar-title2-box .block,
+  .about-title2-box .block {
     left: 137px;
   }
 }
