--- a/templates/about.html
+++ b/templates/about.html
@@ -1,3 +1,16 @@
 {% extends 'layout.html' %} {% block title %}About{% endblock %} {% block body%}
-<h1>This is about</h1>
+<main>
+  <section class="about">
+    <div class="about-container">
+      <div class="about-title">
+        <h1 class="about-title1">About</h1>
+        <div class="about-title2-box">
+          <h1 class="about-title2">Bloc Camp</h1>
+          <div class="block"></div>
+          <div class="line2"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
 {% endblock%}
