--- a/static/css/index.css
+++ b/static/css/index.css
@@ -281,18 +281,20 @@ section.navigation.open-nav .hamburger-close {
   }
 }
 /* -------------------- */
-/* Upcoming Section, Calendar Title (on shows page) / About Title (on About page) */
+/* Upcoming Section, Calendar Title (on shows page) / About Title (on About page) / Contact Title (on Contact page)*/
 /* -------------------- */
 .upcoming,
 .calendar,
-.about {
+.about,
+.contact {
   background-color: #221333;
   padding: 70px 0;
   margin-top: -5px;
 }
 .upcoming-container,
 .calendar-container,
-.about-container {
+.about-container,
+.contact-container {
   width: 65vw;
   margin: 0 auto;
 }
@@ -305,14 +307,16 @@ section.navigation.open-nav .hamburger-close {
 }
 .upcoming-title,
 .calendar-title,
-.about-title {
+.about-title,
+.contact-title {
   display: flex;
   align-items: center;
   margin-bottom: 40px;
 }
 .upcoming-title h1,
 .calendar-title h1,
-.about-title h1 {
+.about-title h1,
+.contact-title h1 {
   font-size: calc(3vw + 1rem);
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -321,12 +325,14 @@ section.navigation.open-nav .hamburger-close {
 }
 .upcoming-title1,
 .calendar-title1,
-.about-title1 {
+.about-title1,
+.contact-title1 {
   background-color: #ffffff;
   line-height: 1.7;
 }
 .upcoming-title2-box .upcoming-title2,
-.about-title2-box .about-title2 {
+.about-title2-box .about-title2,
+.contact-title2-box .contact-title2 {
   width: 100%;
   background-color: #df3311;
   margin-bottom: 0;
@@ -334,13 +340,15 @@ section.navigation.open-nav .hamburger-close {
 }
 .upcoming-title2-box,
 .calendar-title2-box,
-.about-title2-box {
+.about-title2-box,
+.contact-title2-box {
   width: 272px;
   position: relative;
 }
 .upcoming-title2-box .block,
 .calendar-title2-box .block,
-.about-title2-box .block {
+.about-title2-box .block,
+.contact-title2-box .block {
   width: 58px;
   height: 17px;
   background-color: #221333;
@@ -379,35 +387,41 @@ section.navigation.open-nav .hamburger-close {
 @media screen and (max-width: 850px) {
   .upcoming,
   .calendar,
-  .about {
+  .about,
+  .contact {
     margin-top: 55px;
   }
   .upcoming-container,
   .calendar-container,
-  .about-container {
+  .about-container,
+  .contact-container {
     width: 80vw;
   }
   .upcoming-title h1,
   .calendar-title h1,
-  .about-title h1 {
+  .about-title h1,
+  .contact-title h1 {
     font-size: calc(2vw + 0.5rem);
     padding-left: 10px;
   }
   .upcoming-title2-box,
   .calendar-title2-box,
-  .about-title2-box {
+  .about-title2-box,
+  .contact-title2-box {
     width: 210px;
   }
   .upcoming-title2-box .block,
   .calendar-title2-box .block,
-  .about-title2-box .block {
+  .about-title2-box .block,
+  .contact-title2-box .block {
     left: 190px;
   }
   .line2 {
     right: -17px;
   }
   .upcoming-title2-box .upcoming-title2,
-  .about-title2-box .about-title2 {
+  .about-title2-box .about-title2,
+  .contact-title2-box .about-title2 {
     line-height: 50px;
   }
   .upcoming-info {
@@ -417,12 +431,14 @@ section.navigation.open-nav .hamburger-close {
 @media screen and (max-width: 450px) {
   .upcoming,
   .calendar,
-  .about {
+  .about,
+  .contact {
     padding: 50px 0;
   }
   .upcoming-title2-box .block,
   .calendar-title2-box .block,
-  .about-title2-box .block {
+  .about-title2-box .block,
+  .contact-title2-box .block {
     left: 137px;
   }
 }
