--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,17 @@
 {% extends 'layout.html' %}{% block title %}Contact{% endblock %} {% block body
 %}
-<h1>This is contact</h1>
+<main>
+  <section class="contact">
+    <div class="contact-container">
+      <div class="contact-title">
+        <h1 class="contact-title1">contact</h1>
+        <div class="contact-title2-box">
+          <h1 class="contact-title2">Bloc Camp</h1>
+          <div class="block"></div>
+          <div class="line2"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+</main>
 {% endblock %}
