--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %} {% block body %}
+{% extends 'layout.html' %} {% block title %}Home{% endblock %} {% block body %}
 
 <section class="slideshow">
   <div class="swiper" id="swiper1">
