--- a/templates/shows.html
+++ b/templates/shows.html
@@ -15,7 +15,87 @@
   </section>
   <section class="calendar-shows">
     <article class="calendar-show">
-      <img src="" alt="" />
+      <img src="../static/images/img-band-1.jpg" alt="" />
+      <div class="calendar-show-info">
+        <div class="band-date">
+          <h2>The Ecstasy The Ecstasy The Ecstasy</h2>
+          <h2>Wed, Dec 28</h2>
+        </div>
+        <div class="band-info">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
+            maxime est a quisquam, esse excepturi.
+          </p>
+        </div>
+        <button class="btn">get tickets</button>
+      </div>
+    </article>
+    <article class="calendar-show">
+      <img src="../static/images/img-band-1.jpg" alt="" />
+      <div class="calendar-show-info">
+        <div class="band-date">
+          <h2>The Ecstasy The Ecstasy The Ecstasy</h2>
+          <h2>Wed, Dec 28</h2>
+        </div>
+        <div class="band-info">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
+            maxime est a quisquam, esse excepturi.
+          </p>
+        </div>
+        <button class="btn">get tickets</button>
+      </div>
+    </article>
+    <article class="calendar-show">
+      <img src="../static/images/img-band-1.jpg" alt="" />
+      <div class="calendar-show-info">
+        <div class="band-date">
+          <h2>The Ecstasy The Ecstasy The Ecstasy</h2>
+          <h2>Wed, Dec 28</h2>
+        </div>
+        <div class="band-info">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
+            maxime est a quisquam, esse excepturi.
+          </p>
+        </div>
+        <button class="btn">get tickets</button>
+      </div>
+    </article>
+    <article class="calendar-show">
+      <img src="../static/images/img-band-1.jpg" alt="" />
+      <div class="calendar-show-info">
+        <div class="band-date">
+          <h2>The Ecstasy The Ecstasy The Ecstasy</h2>
+          <h2>Wed, Dec 28</h2>
+        </div>
+        <div class="band-info">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
+            maxime est a quisquam, esse excepturi.
+          </p>
+        </div>
+        <button class="btn">get tickets</button>
+      </div>
+    </article>
+    <article class="calendar-show">
+      <img src="../static/images/img-band-1.jpg" alt="" />
+      <div class="calendar-show-info">
+        <div class="band-date">
+          <h2>The Ecstasy The Ecstasy The Ecstasy</h2>
+          <h2>Wed, Dec 28</h2>
+        </div>
+        <div class="band-info">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique
+            maxime est a quisquam, esse excepturi.
+          </p>
+        </div>
+        <button class="btn">get tickets</button>
+      </div>
+    </article>
+    <article class="calendar-show">
+      <img src="../static/images/img-band-1.jpg" alt="" />
       <div class="calendar-show-info">
         <div class="band-date">
           <h2>The Ecstasy The Ecstasy The Ecstasy</h2>
