--- a/static/css/calendar.css
+++ b/static/css/calendar.css
@@ -24,8 +24,9 @@ main {
   max-width: 980px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(210px, 1fr));
   gap: 20px;
+  row-gap: 40px;
 }
 @media screen and (max-width: 850px) {
   .calendar-shows,
@@ -37,13 +38,14 @@ main {
 }
 .calendar-show {
   max-width: 280px;
-  background-color: red;
+  background-color: #221333;
+  overflow: hidden;
 }
 .calendar-show img {
   width: 100%;
   filter: grayscale(100%);
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 550px) {
   .calendar-shows {
     display: flex;
     flex-direction: column;
@@ -51,4 +53,49 @@ main {
   .calendar-show {
     max-width: 100%;
   }
+}
+.calendar-show-info {
+  /* padding: 16px 25px; */
+  position: relative;
+  background-color: #221333;
+  height: 285px;
+  margin-top: -4px;
+}
+.band-date {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.band-date h2 {
+  font-size: 28px;
+  letter-spacing: 0.5px;
+  margin-bottom: 25px;
+  line-height: 1.1;
+}
+.band-name {
+  min-height: 95px;
+}
+.getTicket-btn {
+  width: 100%;
+  height: 95px;
+  display: grid;
+  place-items: center;
+  background-color: #221333;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 3;
+}
+.band-date-info {
+  background-color: #221333;
+  padding: 16px 25px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-height: 426px;
+
+  transition: all 0.3s ease;
+}
+.calendar-show:hover .band-date-info {
+  top: -200px;
 }
