--- a/static/css/calendar.css
+++ b/static/css/calendar.css
@@ -68,6 +68,7 @@ main {
 }
 .band-date h2 {
   font-size: 28px;
+  text-transform: capitalize;
   letter-spacing: 0.5px;
   margin-bottom: 25px;
   line-height: 1.1;
