--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,8 @@
       <div class="about-title">
         <h1 class="about-title1">About</h1>
         <div class="about-title2-box">
-          <h1 class="about-title2">Bloc Camp</h1>
+          <div class="about-title2"></div>
+          <!-- <h1 class="about-title2">Bloc Camp</h1> -->
           <div class="block"></div>
           <div class="line2"></div>
         </div>
