--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,7 +6,8 @@
       <div class="contact-title">
         <h1 class="contact-title1">contact</h1>
         <div class="contact-title2-box">
-          <h1 class="contact-title2">Bloc Camp</h1>
+          <div class="contact-title2"></div>
+          <!-- <h1 class="contact-title2">Bloc Camp</h1> -->
           <div class="block"></div>
           <div class="line2"></div>
         </div>
