--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,9 @@
               <span class="slide-date">wednesday dec. 28</span>
               <span class="slide-time">8.00 pm</span>
               <div>
-                <button>Get Tickets</button>
+                <a href="{{ url_for('shows') }}">
+                  <button>Get Tickets</button>
+                </a>
                 <div class="btn-block"></div>
               </div>
             </div>
@@ -27,7 +29,9 @@
               <span class="slide-date">thursday dec. 29</span>
               <span class="slide-time">7.00 pm</span>
               <div>
-                <button>Get Tickets</button>
+                <a href="{{ url_for('shows') }}">
+                  <button>Get Tickets</button>
+                </a>
                 <div class="btn-block"></div>
               </div>
             </div>
@@ -43,7 +47,9 @@
               <span class="slide-date">friday dec. 30</span>
               <span class="slide-time">8.00 pm</span>
               <div>
-                <button>Get Tickets</button>
+                <a href="{{ url_for('shows') }}">
+                  <button>Get Tickets</button>
+                </a>
                 <div class="btn-block"></div>
               </div>
             </div>
@@ -101,12 +107,16 @@
         </div>
         <h3>{{ eachInfo['artist'] }}</h3>
       </div>
-      <button class="btn">get tickets</button>
+      <a href="{{ url_for('shows') }}">
+        <button class="btn">get tickets</button>
+      </a>
     </div>
     {% endfor %}
 
     <div class="fancy-btn">
-      <button>Get Tickets</button>
+      <a href="{{ url_for('shows') }}">
+        <button>Get Tickets</button>
+      </a>
       <div class="btn-block"></div>
       <div class="btn-bg"></div>
     </div>
