--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../static/css/slide.css" />
     <link rel="stylesheet" href="../static/css/shows.css" />
     <link rel="stylesheet" href="../static/css/calendar.css">
+    <link rel="stylesheet" href="../static/css/about.css">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
