add about-info section on about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,6 @@
         <h1 class="about-title1">About</h1>
         <div class="about-title2-box">
           <div class="about-title2"></div>
-          <!-- <h1 class="about-title2">Bloc Camp</h1> -->
           <div class="block"></div>
           <div class="line2"></div>
         </div>
@@ -14,4 +13,17 @@
     </div>
   </section>
 </main>
+
+<section class="about-info">
+  <div class="square"></div>
+  <img src="" alt="" />
+  <p>
+    Live, local, and a little bit loud are the words the Bloc Camp lives by. A
+    large space for standing and dancing to live music glows in rich ambient
+    hues and a large full bar satiates as a diverse mix of local bands, dj's and
+    headlining punk, alternative, rock, new wave, retro bands rock it. This is
+    both a large and intimate venue that is open late and provides a great
+    musical experience for the budget minded and the VIP crowd alike.
+  </p>
+</section>
 {% endblock%}
