style contact page

--- a/templates/about.html
+++ b/templates/about.html
@@ -16,7 +16,7 @@
 
 <section class="about-info">
   <div class="about-info-container">
-    <div class="square"></div>
+    <div></div>
     <img src="../static/images/img-about.jpg" alt="" />
     <p>
       Live, local, and a little bit loud are the words the Bloc Camp lives by. A
