--- a/templates/shows.html
+++ b/templates/shows.html
@@ -32,7 +32,9 @@
           </div>
         </div>
         <div class="getTicket-btn">
-          <button class="btn">get tickets</button>
+          <a href="{{ url_for('tickets') }}">
+            <button class="btn">get tickets</button>
+          </a>
         </div>
       </div>
     </article>
