media queries for tickets page

--- a/templates/tickets.html
+++ b/templates/tickets.html
@@ -14,14 +14,16 @@
   <div class="tickets-img">
     <img src="../static/images/img-1.jpg" alt="" />
   </div>
-  <section class="time-location">
+</main>
+<section class="time-location">
+  <div class="time-location-container">
     <h3>Time & Location</h3>
     <p>Fri, Apr 06, 2022, 7PM - 11PM</p>
     <p>
       The Bloc Camp, 500 Terry A Francois Blvd, San Francisco, CA 94158, USA
     </p>
-  </section>
-</main>
+  </div>
+</section>
 
 <section class="tickets-info">
   <div class="tickets-info-container">
