--- a/static/css/tickets.css
+++ b/static/css/tickets.css
@@ -2,7 +2,8 @@
 /* Tickets-page headline */
 /* -------------------- */
 .tickets-page,
-.tickets-info {
+.tickets-info,
+.time-location {
   background-color: #221333;
   padding: 40px 0;
 }
@@ -39,21 +40,26 @@
 /* -------------------- */
 /* Tickets-page Time & Location */
 /* -------------------- */
-.time-location,
-.tickets-info-container {
+.tickets-info-container,
+.time-location-container {
   width: 80vw;
   max-width: 980px;
   margin: 0 auto;
 }
-.tickets-page h3,
+.time-location h3,
 .tickets-info h3 {
   font-size: 32px;
   letter-spacing: -1px;
 }
-.time-location h3 {
+.time-location-container h3 {
   margin-bottom: 20px;
 }
-.time-location p {
+.tickets-band-info p {
+  font-family: sans-serif;
+  font-size: 14px;
+  letter-spacing: 1px;
+}
+.time-location-container p {
   font-family: sans-serif;
   font-size: 14px;
   letter-spacing: 1px;
@@ -70,9 +76,6 @@
   line-height: 1.1;
 }
 .tickets-title {
-  /* display: flex;
-  justify-content: space-between;
-  align-items: flex-end; */
   display: grid;
   grid-template-columns: 1.5fr 1.5fr 1fr 1fr;
   align-items: flex-end;
@@ -80,9 +83,6 @@
   padding-bottom: 40px;
 }
 .tickets-calculation {
-  /* display: flex;
-  justify-content: space-between;
-  align-items: flex-end; */
   display: grid;
   grid-template-columns: 1.5fr 1.5fr 1fr 1fr;
   align-items: center;
@@ -93,6 +93,7 @@
 .tickets-amount {
   width: 110px;
   display: flex;
+  font-size: 20px;
   justify-content: space-between;
   align-items: center;
   border: 1px solid #ffffff36;
@@ -132,5 +133,85 @@ button.checkout-btn {
 @media screen and (max-width: 1200px) {
   button.checkout-btn {
     width: 32vw;
+  }
+}
+/* -------------------- */
+/* Tickets-page Media Queries */
+/* -------------------- */
+@media screen and (max-width: 850px) {
+  .tickets-page {
+    padding: 40px 0 0 0;
+  }
+  .tickets-container,
+  .tickets-info-container,
+  .time-location-container {
+    width: 100%;
+  }
+  .tickets-img {
+    width: 100vw;
+    margin: 0 auto 40px auto;
+  }
+  .tickets-img img {
+    width: 100%;
+  }
+  .tickets-page {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .tickets-band-info,
+  .time-location-container,
+  .tickets-title,
+  .tickets-calculation {
+    padding: 0 5vw;
+  }
+  .tickets-band-info h1 {
+    font-size: calc(5vw + 1rem);
+    margin-bottom: 15px;
+  }
+  .tickets-band-info p {
+    width: 100%;
+    margin: 0 auto;
+  }
+  .time-location-container {
+    text-align: center;
+  }
+  .time-location-container h3 {
+    font-size: 20px;
+  }
+  .tickets-title p {
+    display: none;
+  }
+  .tickets-title {
+    padding-bottom: 40px;
+  }
+  .tickets-calculation {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    padding: 30px 5vw;
+  }
+  .total {
+    display: none;
+  }
+  .tickets-amount {
+    gap: 0;
+    width: 100%;
+  }
+  .tickets-total div {
+    display: none;
+  }
+  .tickets-total {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 5vw;
+  }
+  button.checkout-btn {
+    width: calc(100vw - 10vw);
+    margin: 0 auto;
+  }
+  .tickets-info-container {
+    text-align: center;
   }
 }
