--- a/templates/shows.html
+++ b/templates/shows.html
@@ -23,7 +23,7 @@
           <div class="band-date">
             <h2 class="band-name">{{ eachInfo['artist'] }}</h2>
             <h2>
-              {{ eachInfo['day'] }}, {{ eachInfo['month'] }} {{
+              {{ eachInfo['day'][:3] }}, {{ eachInfo['month'] }} {{
               eachInfo['day_num'] }}
             </h2>
           </div>
@@ -32,9 +32,19 @@
           </div>
         </div>
         <div class="getTicket-btn">
-          <a href="{{ url_for('tickets') }}">
-            <button class="btn">get tickets</button>
-          </a>
+          <!-- <a href="{{ url_for('tickets') }}"> -->
+          <!-- <button class="btn" type="submit" value="getBandId" name="getTicket">
+            get tickets
+          </button> -->
+          <!-- </a> -->
+          <form action="/shows" method="post">
+            <input
+              class="btn"
+              type="submit"
+              value="Get Tickets"
+              name="Get Tickets"
+            />
+          </form>
         </div>
       </div>
     </article>
